--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,27 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        jaziri:
+            entity:
+                class: App\Entity\User
+                property: username
+    encoders:
+        App\Entity\User: bcrypt
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
-            lazy: true
-            provider: users_in_memory
+            anonymous: lazy
+            provider: jaziri
+
+            form_login:
+                login_path: login
+                check_path: login
+
+            logout:
+                path: /banque/logout
+                target: /banque/login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
